# tsts

./: .gitignore  Dockerfile  Makefile  docker-compose.ci.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: main.yml
tests/: test_0.py
tsts/: asgi.py  settings.py  urls.py  wsgi.py
