[tool.poetry]
name = "userapp"
version = "0.1.0"
description = ""
authors = []

[tool.isort]
line_length = 100
multi_line_output = 3
profile = "black"

[tool.black]
line-length = 100
exclude = 'client|vendor'

[tool.poetry.dependencies]
django = "~3.2"
django-filter = "^2.4.0"
django-health-check = "^3.14.2"
django_extensions = "^3.0.9"
djangorestframework = "~3.12"
djangorestframework-simplejwt = "^4.4.0"
drf-yasg = "^1.17.1"
psycopg2-binary = "^2.8.6"
python = ">=3.9,<3.10"
uwsgi = "^2.0.19"
django-debug-toolbar = "^3.2"
rollbar = "^0.15.2"
tqdm = "^4.59.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
django-stubs = "^1.6.0"
djangorestframework-stubs = "^1.2.0"
flake8 = "^3.8.4"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.4.0"
flake8-eradicate = "^1.0.0"
flake8-spellcheck = "^0.24.0"
freezegun = "^1.0.0"
mypy = "^0.782"
pep8-naming = "^0.11.1"
pylint = "^2.6.0"
pylint-django = "^2.3.0"
pytest-django = "^3.10.0"
pytest-xdist = "^2.4.0"
autoflake = "^1.4"
requests_mock = "^1.8.0"
pytest-cov = "^3.0.0"
black = "^22.1.0"

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true

[tool.coverage.run]
omit = [
  "**/migrations/*",
  "**/tests/*",
  "manage.py",
  "**/models/*",
  "**/settings.py",
  "**/admin.py"
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.* defines default_app_config = .*:django.utils.deprecation.RemovedInDjango41Warning",
  "ignore:django\\.conf\\.urls\\.url\\(\\) is deprecated in favor of django\\.urls\\.re_path\\(\\)\\.:django.utils.deprecation.RemovedInDjango40Warning",
  ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
